--- a/index.html
+++ b/index.html
@@ -113,25 +113,25 @@
             <p class="profecia">Product Designer</p>
         <ul class="list team-soc-list">
             <li class="team-soc-item">
-                <a href="" calss="team-soc-link">
+                <a href="" class="team-soc-link">
                 <svg class="team-soc-icon" width="16px" height="16px">
                 <use href="./img/icons.svg#icon-instagram"></use>
                 </svg></a>
             </li> 
             <li class="team-soc-item">
-                <a href="" calss="team-soc-link">
+                <a href="" class="team-soc-link">
                 <svg class="team-soc-icon" width="16px" height="16px">
                 <use href="./img/icons.svg#icon-twitter"></use>
                 </svg></a>
             </li>
             <li class="team-soc-item">
-                <a href="" calss="team-soc-link">
+                <a href="" class="team-soc-link">
                 <svg class="team-soc-icon" width="16px" height="16px">
                 <use href="./img/icons.svg#icon-facebook"></use>
                 </svg></a>
             </li>
             <li class="team-soc-item">
-                <a href="" calss="team-soc-link">
+                <a href="" class="team-soc-link">
                 <svg class="team-soc-icon" width="16px" height="16px">
                 <use href="./img/icons.svg#icon-linkedin"></use>
                 </svg></a>
@@ -144,25 +144,25 @@
             <p class="profecia">Frontend Developer</p>
             <ul class="list team-soc-list">
                 <li class="team-soc-item">
-                    <a href="" calss="team-soc-link">
+                    <a href="" class="team-soc-link">
                     <svg class="team-soc-icon" width="16px" height="16px">
                     <use href="./img/icons.svg#icon-instagram"></use>
                     </svg></a>
                 </li> 
                 <li class="team-soc-item">
-                    <a href="" calss="team-soc-link">
+                    <a href="" class="team-soc-link">
                     <svg class="team-soc-icon" width="16px" height="16px">
                     <use href="./img/icons.svg#icon-twitter"></use>
                     </svg></a>
                 </li>
                 <li class="team-soc-item">
-                    <a href="" calss="team-soc-link">
+                    <a href="" class="team-soc-link">
                     <svg class="team-soc-icon" width="16px" height="16px">
                     <use href="./img/icons.svg#icon-facebook"></use>
                     </svg></a>
                 </li>
                 <li class="team-soc-item">
-                    <a href="" calss="team-soc-link">
+                    <a href="" class="team-soc-link">
                     <svg class="team-soc-icon" width="16px" height="16px">
                     <use href="./img/icons.svg#icon-linkedin"></use>
                     </svg></a>
@@ -176,25 +176,25 @@
             <p class="profecia">Marketing</p>
             <ul class="list team-soc-list">
                 <li class="team-soc-item">
-                    <a href="" calss="team-soc-link">
+                    <a href="" class="team-soc-link">
                     <svg class="team-soc-icon" width="16px" height="16px">
                     <use href="./img/icons.svg#icon-instagram"></use>
                     </svg></a>
                 </li> 
                 <li class="team-soc-item">
-                    <a href="" calss="team-soc-link">
+                    <a href="" class="team-soc-link">
                     <svg class="team-soc-icon" width="16px" height="16px">
                     <use href="./img/icons.svg#icon-twitter"></use>
                     </svg></a>
                 </li>
                 <li class="team-soc-item">
-                    <a href="" calss="team-soc-link">
+                    <a href="" class="team-soc-link">
                     <svg class="team-soc-icon" width="16px" height="16px">
                     <use href="./img/icons.svg#icon-facebook"></use>
                     </svg></a>
                 </li>
                 <li class="team-soc-item">
-                    <a href="" calss="team-soc-link">
+                    <a href="" class="team-soc-link">
                     <svg class="team-soc-icon" width="16px" height="16px">
                     <use href="./img/icons.svg#icon-linkedin"></use>
                     </svg></a>
@@ -207,25 +207,25 @@
             <p class="profecia">UI Designer</p>
             <ul class="list team-soc-list">
                 <li class="team-soc-item">
-                    <a href="" calss="team-soc-link">
+                    <a href="" class="team-soc-link">
                     <svg class="team-soc-icon" width="16px" height="16px">
                     <use href="./img/icons.svg#icon-instagram"></use>
                     </svg></a>
                 </li> 
                 <li class="team-soc-item">
-                    <a href="" calss="team-soc-link">
+                    <a href="" class="team-soc-link">
                     <svg class="team-soc-icon" width="16px" height="16px">
                     <use href="./img/icons.svg#icon-twitter"></use>
                     </svg></a>
                 </li>
                 <li class="team-soc-item">
-                    <a href="" calss="team-soc-link">
+                    <a href="" class="team-soc-link">
                     <svg class="team-soc-icon" width="16px" height="16px">
                     <use href="./img/icons.svg#icon-facebook"></use>
                     </svg></a>
                 </li>
                 <li class="team-soc-item">
-                    <a href="" calss="team-soc-link">
+                    <a href="" class="team-soc-link">
                     <svg class="team-soc-icon" width="16px" height="16px">
                     <use href="./img/icons.svg#icon-linkedin"></use>
                     </svg></a>
@@ -342,5 +342,3 @@
 </body>
 </html>
    <!------------------------------------------- /Footer ------------------------------------------------>
-
-  
